# tflite-vx-delegate-imx

./: CMakeLists.txt  README.md  SCR_2.10.0.txt  SCR_2.11.1.txt  SCR_2.8.0.txt  SCR_2.9.1.txt  delegate_main.cc  op_map.cc  utils.cc  utils.h
cmake/modules/: Findtensorflow.cmake
examples/minimal/: CMakeLists.txt  minimal.cc
